# beetlejuice

./: .dockerignore  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
nginx/: default.conf
